--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,3 +3,167 @@
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
+
+
+.permission-wrapper {
+    display: flex;
+    flex: 0 0 100%;
+    flex-direction: column;
+  }
+  .permission-wrapper .permission-header {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+  }
+  .permission-wrapper .permission-body {
+    display: flex;
+    flex-direction: column;
+  }
+  .permission-wrapper .permission-body .p-row {
+    display: flex;
+    align-items: center;
+    transition: all ease-in-out 0.3s;
+  }
+  .permission-wrapper .permission-body .p-row:hover {
+    background-color: rgba(237, 238, 239, 0.75);
+    border-radius: 4px;
+  }
+  .permission-wrapper .permission-body .check {
+    min-width: 18px;
+    width: 18px;
+    height: 18px;
+    border-radius: 3px;
+    background-color: #ccd9ff;
+    overflow: hidden;
+  }
+  .permission-wrapper .permission-body .check::after {
+    content: "";
+    display: inline-block;
+    border: 1px solid #C5CEE0;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    background-size: 8px;
+    background-position: center;
+  }
+  .permission-wrapper .permission-body .check.active {
+    background-color: #3366FF;
+  }
+  .permission-wrapper .permission-body .check.active::after {
+    content: "";
+    display: inline-block;
+    background-size: 10px;
+    background-image: url(icons/role/checked.svg);
+    border-color: #3366FF;
+  }
+  .permission-wrapper .permission-body .column.disabled {
+    align-items: center;
+  }
+  .permission-wrapper .permission-body .column.disabled .check {
+    background-color: transparent;
+    cursor: auto;
+    width: auto;
+  }
+  .permission-wrapper .permission-body .column.disabled .check::after {
+    content: "";
+    display: inline-block;
+    background-image: none;
+    content: "N/A";
+    color: rgba(34, 43, 69, 0.35);
+    border-color: transparent;
+  }
+  .permission-wrapper .column-group {
+    margin-top: 15px;
+  }
+  .permission-wrapper .column-group .title {
+    font-size: 14px;
+    font-weight: 700 !important;
+    padding-top: 10px;
+    margin-bottom: 5px;
+    padding-left: 10px;
+  }
+  @media (max-width: 990.98px) {
+    .permission-wrapper .column-group .title {
+      font-size: 14px;
+    }
+  }
+  .permission-wrapper .column-group .title + .group-rows .p-row .column {
+    padding: 8px 10px;
+    font-weight: 400 !important;
+  }
+  .permission-wrapper .column-group .title + .group-rows .p-row .column.leftAlign:first-child {
+    padding-left: 35px;
+    color: rgba(34, 43, 69, 0.48);
+  }
+  .permission-wrapper .column-group .title + .group-rows .p-row .column:first-child {
+    padding-left: 20px;
+  }
+  .permission-wrapper .column-group .title + .group-rows .p-row .column .text {
+    font-weight: 400 !important;
+  }
+  .permission-wrapper .column-group .sub-group.hasSub .title {
+    padding-left: 20px;
+  }
+  .permission-wrapper .column-group .sub-group.hasSub .p-row .column.leftAlign:first-child {
+    padding-left: 45px;
+  }
+  .permission-wrapper .column-group .sub-group.hasSub .p-row .column:first-child {
+    padding-left: 35px;
+  }
+  .permission-wrapper .column {
+    display: flex;
+    flex: 15%;
+    max-width: 15%;
+    padding: 10px;
+    font-size: 14px;
+    transition: all ease-in-out 0.3s;
+  }
+  @media (max-width: 990.98px) {
+    .permission-wrapper .column {
+      font-size: 14px;
+    }
+  }
+  .permission-wrapper .column .text,
+  .permission-wrapper .column .custom-control-label {
+    color: #445689;
+    text-transform: uppercase;
+    font-size: 11px;
+  }
+  @media (max-width: 990.98px) {
+    .permission-wrapper .column .text,
+  .permission-wrapper .column .custom-control-label {
+      font-size: 11px;
+    }
+  }
+  .permission-wrapper .column:first-child {
+    flex: 55%;
+    max-width: 55%;
+    padding-left: 10px;
+    font-size: 13;
+    font-weight: 600;
+  }
+  .permission-wrapper .column.col-checkbox .check {
+    cursor: pointer;
+  }
+  .permission-wrapper .column.col-checkbox .custom-checkbox {
+    width: 0;
+    height: 0;
+    min-width: 0;
+    padding: 0;
+  }
+  .permission-wrapper .column.col-checkbox .custom-checkbox input[type=checkbox] {
+    width: 0;
+    height: 0;
+  }
+  .permission-wrapper.show .column {
+    justify-content: center;
+  }
+  .permission-wrapper.show .column:first-child {
+    justify-content: flex-start;
+  }
