--- a/public/assets/css/adminlte.css
+++ b/public/assets/css/adminlte.css
@@ -35603,6 +35603,7 @@ body.iframe-mode-fullscreen .content-wrapper.iframe-mode {
 
 .select2-container--default.select2-container--open .select2-selection--single {
   border-color: #80bdff;
+  height: 38px;
 }
 
 .select2-container--default .select2-dropdown {
